--- a/css/styles.css
+++ b/css/styles.css
@@ -5,9 +5,14 @@
 }
 
 body {
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   background-color: #f4f6f9;
   padding: 40px 20px;
+  letter-spacing: 0.03em;
+}
+
+a {
+  text-decoration: none;
 }
 
 .wrapper {
@@ -20,13 +25,20 @@ body {
 
 .sidebar {
   background-color: #1e2939;
-  width: 370px;
+  width: 390px;
   padding-top: 40px;
   padding-bottom: 40px;
 }
 
-.my-foto {
-  width: 370px;
+.box-foto {
+  padding-right: 10px;
+  padding-left: 10px;
+  max-width: 100%;
+}
+.foto {
+  display: inline-block;
+  height: auto;
+  border-radius: 20%;
 }
 
 .about-me-container {
@@ -47,19 +59,41 @@ body {
   margin-bottom: 20px;
 }
 
-.contacts-link {
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 24px;
-  color: #434c5a;
+.contacts-item {
+  margin-bottom: 10px;
+  list-style: none;
 }
 
-.contacts-link-type {
+.contacts-link {
+  display: flex;
+  align-items: center;
   font-size: 14px;
-  font-weight: 700;
+  font-weight: 500;
   line-height: 24px;
-  color: #ffffff;
+  color: #aeb2b8;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    text-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contacts-link:hover,
+.contacts-link:focus {
+  color: #ff6b08;
+  text-shadow: 4px 3px 0px #ffffff;
+}
+
+.contacts-icon {
   margin-right: 10px;
+  width: 24px;
+  height: 24px;
+  fill: currentColor;
+}
+
+.contacts-link:hover .contacts-icon,
+.contacts-link:focus .contacts-icon {
+  background-color: #ffffff;
+  box-shadow: 0px 0px 20px 0px #ffffff;
 }
 
 .skills-container {
@@ -78,7 +112,7 @@ body {
 
 .skills-item {
   font-size: 14px;
-  font-weight: 400;
+  font-weight: 500;
   line-height: 24px;
   color: #ff6b08;
   margin-left: 15px;
@@ -92,22 +126,22 @@ body {
   margin-bottom: 65px;
 }
 
-.profession {
-  font-size: 14px;
-  font-weight: 700;
-  line-height: 24px;
-  margin-bottom: 23px;
-}
-
 .name {
   font-size: 45px;
   font-weight: 700;
   line-height: 89px;
 }
 
+.profession {
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 24px;
+  margin-bottom: 23px;
+}
+
 .description {
-  font-size: 14px;
-  font-weight: 400;
+  font-size: 16px;
+  font-weight: 500;
   line-height: 24px;
   margin-top: 24px;
 }
@@ -123,28 +157,55 @@ body {
   margin-bottom: 10px;
 }
 
+.project-item {
+  font-weight: 700;
+  margin-left: 17px;
+  margin-bottom: 10px;
+}
+
+.project-box {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 .project-link {
   color: #595959;
   font-size: 14px;
-  font-weight: 400;
+  font-weight: 500;
   line-height: 24px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.project-link:focus,
+.project-link:hover {
+  color: #ff6b08;
 }
 
 .tech-name {
-  color: #595959;
-  font-size: 14px;
-  font-weight: 400;
+  font-size: 16px;
+  font-weight: 500;
   line-height: 24px;
+}
+
+.project-git {
+  color: #595959;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.project-git:hover,
+.project-git:focus {
+  color: #ff6b08;
+}
+
+.project-icon {
+  width: 24px;
+  height: 24px;
+  fill: currentColor;
 }
 
 .dots {
   color: #d3d3d3;
   font-weight: 100;
-}
-
-.project-item {
-  font-weight: 700;
-  margin-left: 17px;
 }
 
 .profession-title {
