--- a/css/styles.css
+++ b/css/styles.css
@@ -161,6 +161,7 @@ a {
 .title-color {
   color: #ff6b08;
 }
+
 .project-item {
   font-weight: 700;
   margin-left: 17px;
@@ -171,12 +172,13 @@ a {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin-bottom: 5px;
 }
 
 .project-link {
   margin-right: 5px;
   color: #595959;
-  font-size: 14px;
+  font-size: 16px;
   font-weight: 500;
   line-height: 24px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -197,7 +199,16 @@ a {
   font-weight: 500;
   line-height: 24px;
 }
-
+.project-info {
+  color: #595959;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 24px;
+}
+.info-point {
+  margin-right: 5px;
+  font-weight: 500;
+}
 .project-git {
   color: #595959;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
